--- a/frontend/app/src/Pages/CreateRecipeForm.css
+++ b/frontend/app/src/Pages/CreateRecipeForm.css
@@ -1,12 +1,13 @@
 /* CreateRecipeForm.css */
 
 .create-recipe-form {
-  background-image: url('add.jpg'); /* Replace 'path/to/your-image.jpg' with the actual path to your image */
-  background-size: cover; /* Adjust the sizing as needed */
-  background-repeat: no-repeat; /* Prevent image from repeating */
-  background-position: center; /* Center the image */
+  /* background-image: url('add.jpg'); Replace 'path/to/your-image.jpg' with the actual path to your image */
+  /* background-size: cover; Adjust the sizing as needed */
+  /* background-repeat: no-repeat; Prevent image from repeating */
+  /* background-position: center; Center the image */
   background-color: #ffffff;
   border-radius: 15px;
+  border: 2px solid red;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   padding: 20px;
   margin: 20px auto; /* Adjust margin to center vertically */
@@ -25,6 +26,7 @@
 .create-recipe-form input,
 .create-recipe-form textarea,
 .create-recipe-form button {
+  width: 100%;
   margin-bottom: 10px;
   padding: 10px;
   border: 1px solid #ccc;
@@ -39,15 +41,14 @@
 }
 
 .create-recipe-form button {
-  background-color: #007bff;
-  color: #fff;
-  border: none;
+  background-color:white;
+  color: #ff0000;
+  border: 2px solid #ff0000;
   cursor: pointer;
-  transition: background-color 0.3s ease;
 }
-
 .create-recipe-form button:hover {
-  background-color: #0056b3;
+  background-color:#ff0000;
+  color: white;
 }
 
 /* Additional styles for the card appearance */
