--- a/frontend/app/src/index.css
+++ b/frontend/app/src/index.css
@@ -12,19 +12,24 @@ code {
     monospace;
 }
 
-
-/* Add this CSS to your stylesheet */
 .recipe-image {
-  height: 200px; /* Set the desired image height */
+  height: 200px; 
   object-fit: cover;
 }
 
-/* Make sure the height of the Card is 100% */
 .h-100 {
   height: 100%;
 }
 
-/* Add flex styles to make the Card body content expand vertically */
+.h-100:hover{
+  transform: scale(1.1);
+}
+
+/* 
+.text-center{
+  background-color: black;
+  color: white;
+} */
 
 .flex-column {
   flex-direction: column;
@@ -36,9 +41,9 @@ code {
 }
 
 .button-wrapper {
-  margin-top: auto; /* Push the buttons to the bottom */
+  margin-top: auto; 
 }
 
 .button-wrapper .btn {
-  margin-top: 20px; /* Add spacing between buttons */
+  margin-top: 20px; 
 }
