--- a/frontend/app/src/Pages/Login.css
+++ b/frontend/app/src/Pages/Login.css
@@ -1,9 +1,9 @@
 
 .login {
     max-width: 400px;
-    margin: 0 auto;
+    margin: 75px auto;
     padding: 20px;
-    border: 1px solid #ccc;
+    border: 2px solid red;
     border-radius: 5px;
     background-color: #f9f9f9;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -19,6 +19,8 @@
   form {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
   
   input[type="email"],
@@ -28,23 +30,22 @@
     border: 1px solid #ccc;
     border-radius: 5px;
     font-size: 16px;
+    width: 325px;
   }
   
-  input[type="submit"] {
-    background-color: #f0f0f0;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    padding: 12px 20px;
-    font-size: 18px;
+  .btn {
+   
+    background-color: white;
+    color: red;
     cursor: pointer;
-    transition: background-color 0.3s ease;
+    
   }
   
-  input[type="submit"]:hover {
-    background-color: #0056b3;
+  .btn:hover {
+    background-color:red;
+    color: white;
   }
-  
+ 
   p {
     text-align: center;
     margin-top: 20px;
