--- a/frontend/app/src/Pages/Signup.css
+++ b/frontend/app/src/Pages/Signup.css
@@ -1,9 +1,9 @@
 
 .login {
     max-width: 400px;
-    margin: 0 auto;
+    margin: 75px auto;
     padding: 20px;
-    border: 1px solid #ccc;
+    border: 2px solid red;
     border-radius: 5px;
     background-color: #f9f9f9;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -19,26 +19,20 @@
   form {
     display: flex;
     flex-direction: column;
+    justify-content: center;
   }
   
-  input[type="email"],
-  input[type="password"] {
-    margin-bottom: 10px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 16px;
-  }
-  
-  input[type="submit"] {
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    padding: 12px 20px;
-    font-size: 18px;
+  .btn {
+   
+    background-color: white;
+    color: red;
     cursor: pointer;
-    transition: background-color 0.3s ease;
+    
+  }
+  
+  .btn:hover {
+    background-color:red;
+    color: white;
   }
   
   input[type="submit"]:hover {
