--- a/frontend/app/src/Pages/Signup.css
+++ b/frontend/app/src/Pages/Signup.css
@@ -16,7 +16,7 @@
     color: #333;
   }
   
-  form {
+  .forml {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -40,10 +40,10 @@
   }
   
   p {
-    text-align: center;
+    /* text-align: center; */
     margin-top: 20px;
     margin-bottom: 10px;
     font-size: 16px;
-    color: #777;
+    /* color: #777; */
   }
   
