--- a/frontend/app/src/App.css
+++ b/frontend/app/src/App.css
@@ -462,3 +462,16 @@ button:hover {
   background-color: greenyellow;
 }
 
+.rform{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.ip{
+  
+  margin-bottom: 10px;
+  width: 600px;
+  border-radius: 10px;
+  height:50px;
+}
